Worked on most aspect of the site

--- a/probalance.webflow.io/index.html
+++ b/probalance.webflow.io/index.html
@@ -665,7 +665,7 @@
               <div class="imapact-component">
                 <div class="imapact-content-wrapper">
                   <h2 data-w-id="cd7971cc-4f41-2f49-9da3-59a1b921dea4" class="heading-style-h2">Results behind our firm</h2>
-                  <div data-w-id="cd7971cc-4f41-2f49-9da3-59a1b921dea6" class="text-size-regular">Digital Transformation of business, Increased productivity and performance, Cuts down unnecessary costs and Enhanced Competitive advantage.</div>
+                  <div data-w-id="cd7971cc-4f41-2f49-9da3-59a1b921dea6" class="text-size-regular">Digital Transformation of business, Increased productivity and performance, Cut down unnecessary costs and Enhanced Competitive advantage.</div>
                 </div>
                 <div class="padding-bottom padding-large"></div>
                 <div class="w-layout-grid imapact-list">
