--- a/probalance.webflow.io/service.html
+++ b/probalance.webflow.io/service.html
@@ -32,7 +32,7 @@
       role="banner" class="navber w-nav">
       <div class="nav-container">
         <div class="navber-left-content-wrapper"><a href="index.html" class="nav-brand-logo-wrapper w-nav-brand"><img
-              src="../cdn.prod.website-files.com/665d34b45136fb900ef58460/665ec894a1e513849e8d1445_Navbar%20Logo.svg"
+              src="../cdn.prod.website-files.com/665d34b45136fb900ef58460/Teranium green.png" width="70px"
               loading="lazy" alt="" class="nav-brand-logo" /></a></div>
         <div class="navber-content-wrapper">
           <nav role="navigation" class="nav-menu w-nav-menu"><a href="index.html" class="nav-link w-nav-link">Home</a><a
